# Web_hw_7

./: BD.sql  README.md  alembic.ini  config.ini  main.py  pyproject.toml  select_bd.py
alembic/: env.py
alembic/versions/: 08ac8265a506_init.py
conf/: db.py  models.py
seeds/: seed.py
