[tool.poetry]
name = "web-hw-7"
version = "0.1.0"
description = "SQL Alchemy"
authors = ["Vlad <vlad111121562@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.26"
faker = "^23.1.0"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
